# qtvideoplayer

./: .gitignore  CMakeLists.txt  README.md  demuxer.h  mediaplayer.excalidraw  resources.qrc
src/: CMakeList.txt  CMakeLists.txt  DER.cc  DER.h  VideoWidget.cc  VideoWidget.h  console.cc  console.h  fullscreenwidget.cc  fullscreenwidget.h  home.cc  home.h  label.h  main.cc  playlist.cc  playlist.h  polygon.cc  polygon.h  rbvideowidget.cc  scrollarea.cc  scrollarea.h  style.cc  style.h  videowidget.cc  videowidget.h  yslider.cc  yslider.h
videoprocessing/: audiowidget.h  decoder.h  demuxer.h  glwidget.cc  glwidget.h  mediaplayer.h  player.cc  player.h  resampler.h  screen.cc  screen.h  target.h  test.cc
